# stjornhorn

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  stjornhorn.spec
.github/workflows/: claude-issue.yml  release.yml
doc/: welcome.html
flow/: Untitled_flow.flowjs  debug_delay.flowjs  debug_error.flowjs  debug_ncc_video.flowjs  delay.flowjs  dither.flowjs  jjj.flowjs  mosaic.flowjs  ncc.flowjs  rgb_dither.flowjs  rgb_split.flowjs  sample_dither_compose.flowjs  sample_ncc.flowjs  sample_overlay.flowjs  sample_transform.flowjs  sample_video_proc.flowjs  test_dither.flowjs  test_numeric.flowjs  test_overlay_rot.flowjs  tt.flowjs  video.flowjs  video_dither.flowjs  video_dither_simple.flowjs  video_ncc.flowjs
src/: constants.py  log.py  main.py
src/core/: flow.py  io_data.py  node_base.py  node_definition.py  node_registry.py  port.py
src/ocvl/: StarStacker.py  main_dither.py  main_star_stack.py  main_stitch.py
src/ui/: _types.py  app_version_status_widget.py  backdrop_item.py  dpg_flow_viewer_panel.py  (+31 more)
tests/: conftest.py  test_auto_param_ports.py  test_backdrop.py  test_basic_flow.py  test_clamp.py  test_constant_value.py  test_directory_source.py  test_display.py  test_filters.py  test_flow_scene_dirty.py  test_io_data.py  test_math.py  test_merge.py  test_new_filters.py  test_node_editor_save_as.py  test_overlay.py  test_port_connections.py  test_port_driven_attributes.py  test_rgba_split_join.py  test_skip_node.py  test_source_path_normalization.py  test_value_sink.py  test_value_source.py  test_video_sink.py
(+69 files in other folders)
